--- a/exercise7/css/contact.css
+++ b/exercise7/css/contact.css
@@ -10,6 +10,10 @@ body{
   margin: auto;
 }
 
+.row {
+  display: inline-flex;
+}
+
 .box0 {
   background-color: #57c8ff;
   width: 100%;
@@ -23,7 +27,7 @@ body{
   color: #ffffff;
   font-weight: normal;
   text-transform:uppercase;
-  margin-top: 15px;
+  margin: 15px 5px;
 }
 
 .box1 {
@@ -31,9 +35,35 @@ body{
   font-family: Georgia, sans-serif;
   max-width: 80%;
   margin: auto;
+  padding: 20px;
 }
 
 .box1 h2 {
+    color: #a2abba;
+    font-size:1.5em;
+    margin-top: 15px;
+    font-family: Georgia, sans-serif;
+}
+
+.box1 ul {
+  list-style-type: none;
+  color: #57c8ff;
+}
+
+.box1 ul li {
+  margin: auto;
+  padding: 3px;
+}
+
+.box2 {
+  background-color: #ffffff;
+  font-family: Georgia, sans-serif;
+  max-width: 80%;
+  margin: auto;
+  padding: 20px;
+}
+
+.box2 h2 {
     color: #a2abba;
     font-size:1.5em;
     margin-top: 15px;
@@ -57,4 +87,11 @@ body{
   line-height: 40px;
   margin-left: auto;
   margin-right: auto;
+}
+
+#footer {
+  padding: 20px;
+  margin: auto;
+  width: 100%;
+  text-align: center;
 }
