--- a/exercise7/css/work.css
+++ b/exercise7/css/work.css
@@ -10,6 +10,10 @@ body{
   margin: auto;
 }
 
+.main {
+  display: inline-flex;
+}
+
 .box0 {
   background-color: #57c8ff;
   width: 100%;
@@ -40,6 +44,35 @@ body{
     font-family: Georgia, sans-serif;
 }
 
+.box2 {
+  background-color: #ffffff;
+  font-family: Georgia, sans-serif;
+  max-width: 80%;
+  margin: auto;
+}
+
+.box2 h2 {
+    color: #a2abba;
+    font-size:1.5em;
+    margin-top: 15px;
+    font-family: Georgia, sans-serif;
+}
+
+.box3 {
+  background-color: #ffffff;
+  font-family: Georgia, sans-serif;
+  max-width: 80%;
+  margin: auto;
+}
+
+.box3 h2 {
+    color: #a2abba;
+    font-size:1.5em;
+    margin-top: 15px;
+    font-family: Georgia, sans-serif;
+}
+
+
 #navbar {
   margin:0;
   padding:0;
@@ -57,4 +90,11 @@ body{
   line-height: 40px;
   margin-left: auto;
   margin-right: auto;
+}
+
+#footer {
+  padding: 20px;
+  margin: auto;
+  width: 100%;
+  text-align: center;
 }
